--- a/Unix-Vi/index.html
+++ b/Unix-Vi/index.html
@@ -1,14 +1,18 @@
 <title>CS140 Lecture notes -- Unix, Vi, Files and Compiling</title>
 <body bgcolor=ffffff>
+<UL>
 <h1>CS140 Lecture notes -- Unix, Vi, Files and Compiling</h1>
-<LI><a href=http://web.eecs.utk.edu/~jplank>Jim Plank</a>
+<LI><a href=http://web.eecs.utk.edu/~jplank>James S. Plank</a>
 <LI>Directory: <b>~jplank/cs140/Notes/Unix-Vi</b>
 <LI>Lecture notes:
     <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Unix-Vi>
     <b>http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Unix-Vi</b></a>
+<LI> Original notes: 2012 or so
 <LI> Last modification date: <i>
-Tue Jan 10 18:42:50 EST 2012
+Tue Aug 20 12:33:02 EDT 2019
 </i>
+</UL>
+
 <hr>
 
 <h3>Where you are and where you are going</h3>
@@ -24,23 +28,14 @@ to learn how to write C++ programs in a Unix environment.  This will be far more
 cumbersome than using an IDE.  However, it facilitates you learning about computers,
 which is an important part of your education.
 <p>
-There are three major operating systems for laptops and computers these days: 
-Windows, Mac OS-X, and the Unix machines (Linux, Solaris, etc).  Our lab machines
-are Linux machines, and they will be the ones on which I assume we will be working.
-OS-X is nice because it actually has an integrated Unix environment.  You can 
-go to <b>Applications</b> and <b>Utilities</b>, and there will be a <b>Terminal</b>
-application.  When you run it, you will be running a standard Unix command-line
-interpreter, called a <i>shell</i>.  Life is good.
+We're in a fortunate time in history (writing this in 2019) that all operating systems
+have some version of Linux at their core.  So, whether you are running native Linux,
+Windows or OSX, you should have access to a Linux shell with a C++ compiler.  
+This needs to be the first thing that you do for this class -- besides learning how
+to use the lab computers, you should make sure you have your own personal access to
+a Unix environment.  Consult the TA's in lab if you have questions.  That's part of
+their job responsibilities.
 <p>
-On Windows, life is more difficult.  You have two options.  The first is to simply
-log into a Unix machine over the internet.  Look for a "secure shell" program, and
-use it to log into one of our lab machines remotely.  The second is to download 
-a Unix environment for Windows.  I typically use Cygwin -- it's free (download
-from <a href=http://www.cygwin.com/>www.cygwin.com</a>, and for the
-most part, it works like you'd hope it would.  It is a program on top of windows,
-though, and doesn't act like a true Unix operating system all the time.  Such is life.  I would
-recommend that if you want to work on a Windows machine, that you go ahead and
-download cygwin, and make sure that it has the programs <b>vi</b> and <b>g++</b> installed.
 <hr>
 <h3>Learning Unix</h3>
 
@@ -82,7 +77,7 @@ many files.  We'll start with just one file for now.
 <p>
 Our example program is the canonical "hello world" program, which is in the file
 <b><a href=hw.cpp>hw.cpp</a></b> in the directory for these lecture notes
-(<b>/home/plank/cs140/Notes/Unix-Vi</b>).  Of course, if you click on that link, you
+(<b>/home/jplank/cs140/Notes/Unix-Vi</b>).  Of course, if you click on that link, you
 can save the program on your own computer.
 <p>
 I will always use "UNIX>" to denote my shell prompt.  I will usually have
@@ -100,14 +95,14 @@ UNIX> <font color=darkred><b>ls</b></font>
 hw.cpp
 UNIX> <font color=darkred><b>ls -l</b></font>
 total 8
--rw-r--r--  1 plank  staff  98 Jan 11 13:22 hw.cpp
+-rw-r--r--  1 jplank  staff  98 Jan 11 13:22 hw.cpp
 UNIX> <font color=darkred><b>g++ hw.cpp</b></font>
 UNIX> <font color=darkred><b>ls </b></font>
 a.out	hw.cpp
 UNIX> <font color=darkred><b>ls -l</b></font>
 total 32
--rwxr-xr-x  1 plank  staff  9776 Jan 11 13:29 a.out
--rw-r--r--  1 plank  staff    98 Jan 11 13:22 hw.cpp
+-rwxr-xr-x  1 jplank  staff  9776 Jan 11 13:29 a.out
+-rw-r--r--  1 jplank  staff    98 Jan 11 13:22 hw.cpp
 UNIX> <font color=darkred><b>./a.out</b></font>
 Hello World!
 UNIX> <font color=darkred><b></b></font>
@@ -116,10 +111,11 @@ UNIX> <font color=darkred><b></b></font>
 In this example, I compiled <b>hw.cpp</b> and it created the executable <b>a.out</b>.
 I ran it by typing "./a.out", and it printed "Hello World".  
 <p>
-The "<b>ls -l</b>" gives you a detailed listing of the files, including ownership (plank),
+The "<b>ls -l</b>" gives you a detailed listing of the files, including ownership (jplank),
 last modification time (Jan 11 12:29 for <b>a.out</b>), size (9776 for <b>a.out</b>), and
 "permissions."  Those are in the first word.  The x's in the listing for <b>a.out</b> mean
-that it is a program that can be executed.
+that it is a program that can be executed.  (BTW, if you compile this, you'll very likely 
+get a different size for <b>a.out</b>, as it depends on your machine and compiler).
 <p>
 I can make g++ create the executable with a different name using the "-o filename" flag.  You put
 that flag before the "source file" (the .cpp file):
@@ -129,8 +125,8 @@ UNIX> <font color=darkred><b>rm a.out</b></font>
 UNIX> <font color=darkred><b>g++ -o hw hw.cpp</b></font>
 UNIX> <font color=darkred><b>ls -l</b></font>
 total 32
--rwxr-xr-x  1 plank  staff  9776 Jan 11 13:33 hw
--rw-r--r--  2 plank  staff    98 Jan 11 13:22 hw.cpp
+-rwxr-xr-x  1 jplank  staff  9776 Jan 11 13:33 hw
+-rw-r--r--  2 jplank  staff   103 Jan 11 13:22 hw.cpp
 UNIX> <font color=darkred><b>./hw</b></font>
 Hello World!
 UNIX> <font color=darkred><b></b></font>
@@ -147,22 +143,22 @@ so that there is no semi-colon after "endl":
 UNIX> <font color=darkred><b>vi hw.cpp</b></font>
 ... delete that semi-colon
 UNIX> <font color=darkred><b>cat hw.cpp</b></font>
-#include <iostream>
+#include &lt;iostream&gt;
 using namespace std;
 
-main()
+int main()
 {
-  cout << "Hello World!" << endl
-  exit(0);
+  cout << "Hello World!" << endl         <font color=blue>// There's no semi-colon after endl</font>
+  return 0;
 }
 UNIX> <font color=darkred><b>g++ hw.cpp</b></font>
 hw.cpp: In function "int main()":
-hw.cpp:7: error: expected `;' before "exit"
+hw.cpp:7: error: expected `;' before "return"
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
 That's a nice error message -- you need a semi-colon on line 7.  Actually, it's line six,
-but the compiler says 7 because it discovered the error when it read the "exit" command.  
+but the compiler says 7 because it discovered the error when it read the "return" command.  
 By the way, if you haven't used "cat"
 before, it simply prints a file to the screen.  Fix the bug, recompile and rerun to double-check
 yourself.  Now, edit it again, and delete the second quotation mark.  I'll use "cat -n" to 
@@ -172,19 +168,19 @@ print line numbers when it prints the file:
 UNIX> <font color=darkred><b>vi hw.cpp</b></font>
 ... delete the second quotation mark:
 UNIX> <font color=darkred><b>cat -n hw.cpp</b></font>
-     1	#include <iostream>
+     1	#include &lt;iostream&gt;
      2	using namespace std;
      3	
      4	main()
      5	{
-     6	  cout << "Hello World! << endl;
-     7	  exit(0);
+     6	  cout << "Hello World! << endl;   <font color=blue>// There's now no quotation mark after '!'</font>
+     7	  return 0;
      8	}
 UNIX> <font color=darkred><b>g++ hw.cpp</b></font>
 hw.cpp:6:11: warning: missing terminating " character
 hw.cpp:6: error: missing terminating " character
 hw.cpp: In function 'int main()':
-hw.cpp:7: error: 'exit' was not declared in this scope
+hw.cpp:7: error: 'return' was not declared in this scope
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
@@ -198,7 +194,7 @@ UNIX> <font color=darkred><b>g++ hw.cpp</b></font>
 hw.cpp:6:11: warning: missing terminating " character
 hw.cpp:6: error: missing terminating " character
 hw.cpp: In function 'int main()':
-hw.cpp:7: error: no match for 'operator<<' in 'std::cout << exit(0)'
+hw.cpp:7: error: no match for 'operator<<' in 'std::cout << return 0 '
 /usr/include/c++/4.2.1/ostream:112: note: candidates are: std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(std::basic_ostream<_CharT, _Traits>& (*)(std::basic_ostream<_CharT, _Traits>&)) [with _CharT = char, _Traits = std::char_traits<char>]
 /usr/include/c++/4.2.1/ostream:121: note:                 std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(std::basic_ios<_CharT, _Traits>& (*)(std::basic_ios<_CharT, _Traits>&)) [with _CharT = char, _Traits = std::char_traits<char>]
 /usr/include/c++/4.2.1/ostream:131: note:                 std::basic_ostream<_CharT, _Traits>& std::basic_ostream<_CharT, _Traits>::operator<<(std::ios_base& (*)(std::ios_base&)) [with _CharT = char, _Traits = std::char_traits<char>]
