--- a/Review/index.html
+++ b/Review/index.html
@@ -2,7 +2,7 @@
 <body bgcolor=ffffff>
 <UL>
 <h1>CS140 Lecture notes -- Review</h1>
-<LI><a href=http://web.eecs.utk.edu/~jplank>Jim Plank</a>
+<LI><a href=http://web.eecs.utk.edu/~jplank>James S. Plank</a>
 <LI>Directory: <b>~jplank/cs140/notes/Review</b>
 <LI>Lecture notes:
     <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Review>
