--- a/Topcoder/index.html
+++ b/Topcoder/index.html
@@ -2,7 +2,7 @@
 <body bgcolor=ffffff>
 <h1>CS140 Lecture notes -- Topcoder</h1>
 <UL>
-<LI><a href=http://web.eecs.utk.edu/~jplank>Jim Plank</a>
+<LI><a href=http://web.eecs.utk.edu/~jplank>James S. Plank</a>
 <LI>Directory: <b>~jplank/cs140/notes/Topcoder</b>
 <LI>Lecture notes:
     <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Topcoder>
