--- a/Argv/index.html
+++ b/Argv/index.html
@@ -406,67 +406,79 @@ to call its <b>str()</b> method with an empty string as its argument.  That rese
 it to be empty.  If you don't do it and you're not ready for it, you'll get some surprising output.
 For example, 
 <b><a href=clearing-output.cpp>clearing-output.cpp</a></b>
-attempts to print out four random integers by first putting them into an <b>ostringstream</b>
-and then printing out the string:
+uses a stringstream to create four strings with four numbers each.  It does this twice.
+The first time, it doesn't call <b>ss.str("")</b>, and so what you see is that the stringstream
+keeps getting appended, instead of getting cleared with each line.  The second time, it 
+does call <b>ss.str("")</b>, and you see that the stringstream is cleared properly:
 
 <p><center><table border=3 cellpadding=3><td><pre>
+<font color=blue>/* This program's intent is to use a single ostringstream to create four strings, 
+   each of which has four numbers in it.  We do it twice -- once incorrectly, because
+   we don't call str("") on the stringstream to reset it.  The second time, we do it
+   correctly. */</font>
+
 #include &lt;iostream&gt;
 #include &lt;cstdio&gt;
 #include &lt;cstdlib&gt;
 #include &lt;sstream&gt;
 using namespace std;
 
-int main(int argc, char **argv)
+int main()
 {
-  ostringstream ss, ss2;
-  int i, j;
+  ostringstream ss;
+  int i;
+  string s;
 
-  srand48(0);
-  printf("Not calling ss.str(\"\"):\n\n");
+  <font color=blue>/* Here we create four strings, each of which is supposed to hold four numbers,
+     with an ostringstream, but we do it incorrectly. */</font>
+
+  printf("Using the stringstream incorrectly:\n\n");
+
   for (i = 0; i &lt; 4; i++) {
     ss.clear();
-    ss &lt;&lt; "#" &lt;&lt; i &lt;&lt; ": " &lt;&lt; lrand48()%1000 &lt;&lt; "\n";
-    cout &lt;&lt; ss.str();
+    ss &lt;&lt; 10*i &lt;&lt; " " &lt;&lt; 10*i+1 &lt;&lt; " " &lt;&lt; 10*i+2 &lt;&lt; " " &lt;&lt; 10*i+3;
+    s = ss.str();
+    cout &lt;&lt; s &lt;&lt; endl;
   }
   cout &lt;&lt; endl;
 
-  srand48(0);
-  printf("Calling ss2.str(\"\"):\n\n");
- 
+  <font color=blue>/* Now we do the same thing, but correctly, by calling ss.str("") before
+     putting numbers into the stringstream. */</font>
+
+  printf("Using the stringstream correctly:\n\n");
+
   for (i = 0; i &lt; 4; i++) {
-    ss2.clear();
-    ss2.str("");
-    ss2 &lt;&lt; "#" &lt;&lt; i &lt;&lt; ": " &lt;&lt; lrand48()%1000 &lt;&lt; "\n";
-    cout &lt;&lt; ss2.str();
+    ss.clear();
+    ss.str("");                        <font color=blue>// This is the only change from the code above.</font>
+    ss &lt;&lt; 10*i &lt;&lt; " " &lt;&lt; 10*i+1 &lt;&lt; " " &lt;&lt; 10*i+2 &lt;&lt; " " &lt;&lt; 10*i+3;
+    s = ss.str();
+    cout &lt;&lt; s &lt;&lt; endl;
   }
+  cout &lt;&lt; endl;
+
+  return 0;
 }
 </pre></td></table></center><p>
 
-In the first loop, it does not call <b>str("")</b> at the beginning of each iteration,
-and as a result, the same numbers get printed out multiple times.  The second loop
-prints each number exactly once:
+Here's the output -- as you can see, the first set of strings looks really odd, because
+the stringstream does not get reset:
 
 <pre>
-UNIX> <font color=darkred><b>clearing-output</b></font>
-Not calling ss.str(""):
+UNIX> <font color=darkred><b>./clearing-output</b></font>
+Using the stringstream incorrectly:
 
-#0: 414
-#0: 414
-#1: 240
-#0: 414
-#1: 240
-#2: 554
-#0: 414
-#1: 240
-#2: 554
-#3: 841
+0 1 2 3
+0 1 2 310 11 12 13
+0 1 2 310 11 12 1320 21 22 23
+0 1 2 310 11 12 1320 21 22 2330 31 32 33
 
-Calling ss2.str(""):
+Using the stringstream correctly:
 
-#0: 414
-#1: 240
-#2: 554
-#3: 841
+0 1 2 3
+10 11 12 13
+20 21 22 23
+30 31 32 33
+
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
@@ -487,7 +499,7 @@ each word on standard input, preceded by its line number and word number.
 #include &lt;sstream&gt;
 using namespace std;
 
-int main(int argc, char **argv)
+int main()
 {
   istringstream ss;
   string s;
